plugin/src/test/resources/annotator/perl/unreachableCode/givenWhenBreakDefaultPostfix.code
sub subname {
    'start';
    given($something){
        'before';
        break when($a);
        'mid';
        default{
            $c;
            break;
            <error descr="Unreachable code">$d</error>;
        }
        '<error descr="Unreachable code">after</error>';
    }
    'end';
}
